# lightbender

./: .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
3d/: frame.3mf  rod_joint.3mf  rod_segment.3mf  rpi_cover.3mf  servo_case.3mf  tube_joint.3mf
Interaction/: README.md  Readme.md  blender_addon_new.py  loadcell_worker.py  plot_interactions.py  stats_analysis.py
analysis/: plot_rmse_json.py  relative_rmse_all.py  rmse.py  rmse_all.py  tracker_rmse.py
authoring/: README.md  allocate.py  allocate_multi_type.py  blender_addon.py  blender_addon_new.py  blender_addon_ui_only.py  combine_csv.py  convert_to_mission.py  deconflict.py  force_update.py  lb_author.sh  morph_match.py  perspective_camera.py  place.py  place_multi_type.py  requirements.txt  run_combinations.sh  run_experiment.sh  run_score.sh  transform.py  video_image_seq.py
authoring_tool/: blender_addon.py  deconflict.py
logger/: logger.py  logging_config.yaml
mock_orchestrator/: orchestrator.py  swarm_manifest.yaml
morphing-controller/: controller.py
morphing-orchestrator/: animate.py  collision.yaml  collisionDetection.py  debug.YAML  mission.yaml  morphingEmulator.py  orchestrator.py  originalMissionFile.YAML  replacement.py  (+4 more)
orchestrator/UploadVideoLogs/: README.md  config.json  dummy_generate_logs.py  pyproject.toml
orchestrator/UploadVideoLogs/credentials/: oauth-client.json  service-account.json  token.pkl
orchestrator/UploadVideoLogs/src/: __init__.py  drive_client.py
orchestrator/uploader/: .env.example  pyproject.toml  storage.py  upload.py
(+142 files in other folders)
